# api/handlers/user_handler.go
@@ -2,8 +2,10 @@ package handlers
 
 import (
 	"fmt"
+	"github.com/gofiber/fiber/v2/log"
 	"live-pilot/api/presenter"
 	"live-pilot/api/presenter/errors"
+	"live-pilot/pkg/ent"
 	"live-pilot/pkg/service"
 	"strconv"
 
@@ -19,22 +21,31 @@ func NewUserHandler(us *service.UserService) *UserHandler {
 }
 
 // GetUser handles GET /user/:id
-// @Summary Get user by ID
-// @Description Get user details by user ID
-// @Tags user
-// @Accept json
-// @Produce json
-// @Param id path int true "User ID"
-// @Success 200 {object} map[string]interface{}
-// @Failure 400 {object} map[string]interface{}
-// @Router /user/{id} [get]
+//
+//	@Summary		Get user by ID
+//	@Description	Get user details by user ID
+//	@Tags			user
+//	@Accept			json
+//	@Produce		json
+//	@Param			id			path		int	true	"User ID"
+//	@Success		200			{object}	ent.User
+//	@Failure		400,404,500	{object}	presenter.ErrorResponse
+//	@Router			/user/{id} [get]
 func (u *UserHandler) GetUser(c *fiber.Ctx) error {
 	idStr := c.Params("id")
 	id, err := strconv.ParseUint(idStr, 10, 32)
 	if err != nil {
 		return errors.BadRequest(fmt.Sprintf("invalid user id: %s", idStr))
 	}
-	return c.JSON(u.us.GetUser(uint32(id)))
+	user, err := u.us.GetUser(uint32(id))
+	if err != nil {
+		if ent.IsNotFound(err) {
+			return errors.NotFound(fmt.Sprintf("user not found with id: %d", id))
+		}
+		log.Errorf("error getting user: %#v", err)
+		return errors.InternalServerError(fmt.Sprintf("error getting user with id: %d", id))
+	}
+	return c.JSON(user)
 }
 
 func (u *UserHandler) SaveUser(c *fiber.Ctx) error {
